# DXMiniApp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DXMiniApp.manifest  README.md  TODO.md  app.rc  housekeeper.ps1  lawnkeeper.ps1  vcpkg.json
.github/actions/vcpkg-setup/: action.yml
.github/workflows/: ci.yml
src/: DirectXView.cpp  DirectXView.h  FileView.cpp  FileView.h  Main.cpp  NodeView.cpp  NodeView.h  Win32Application.cpp  Win32Application.h
src/CommandObjects/: CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  LocalContext.cpp  LocalContext.h
src/Common/: Debug.h  NonCopyable.h  StackAllocatable.h
src/Device/: DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h
src/Files/: BaseFileProvider.h  WorkingDirFileProvider.cpp  WorkingDirFileProvider.h
src/Graphics/: Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DebugLayer.cpp  DebugLayer.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Display.cpp  Display.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  Resource.h  SwapChain.cpp  SwapChain.h
src/Includes/: DXInclude.h  DxInclude.h  WinInclude.h  WindowsInclude.h
src/Resources/: Resource.cpp  Resource.h
src/Scene/: Camera.cpp  Camera.h
src/Util/: BaseFileProvider.h  Debug.h  WorkingDirFileProvider.cpp  WorkingDirFileProvider.h
src/Window/: BaseView.h  FileView.cpp  FileView.h  Main.cpp  MainWindow.cpp  MainWindow.h  Messages.h  NodeView.cpp  NodeView.h  SceneTree.cpp  SceneTree.h  SceneView.cpp  SceneView.h  Win32Application.cpp  Win32Application.h
